--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,5 +1,3 @@
 #JDBC properties entry for ORACLE server
 driver = oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:xe
-#username=SYSTEM
-#password=root
+url = jdbc:oracle:thin:system/Amudhan.123@localhost:1521:orcle
